added camera section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,10 +11,11 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="header-left">
-            <h2>Influencer products</h2>
+            <h2 id="header-influencer">Influencer products</h2>
         </div>
         <div class="header-right">
             <ul>
@@ -26,5 +28,21 @@
             </ul>
         </div>
     </header>
+    <main>
+        <!-- Camera Part -->
+        <section class="camera">
+            <div class="camera-text">
+                    <h1 id="camera-head">Start your Journey as <br>
+                        Influencer </h1>
+                    <p class="camera-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>
+                        vestibulum sed scelerisque eros. Lectus faucibus. </p>
+                    <button id="camera-text-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="add-camera">
+                <img class="image-1" src="images/main-camera.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
