--- a/index.html
+++ b/index.html
@@ -42,6 +42,31 @@
                 <img class="image-1" src="images/main-camera.png" alt="">
             </div>
         </section>
+        <hr>
+        <!-- Logos Section -->
+        <section class="logos">
+            <div class="logo">
+                <img src="logos/Alibaba.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Amazon.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Ebay.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Rakuten.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Target.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+        </section>
     </main>
 </body>
 
