--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <!-- Camera Part -->
         <section class="camera">
             <div class="camera-text">
-                    <h1 id="camera-head">Start your Journey as <br>
-                        Influencer </h1>
-                    <p class="camera-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>
-                        vestibulum sed scelerisque eros. Lectus faucibus. </p>
-                    <button id="camera-text-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+                <h1 id="camera-head">Start your Journey as <br>
+                    Influencer </h1>
+                <p class="camera-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>
+                    vestibulum sed scelerisque eros. Lectus faucibus. </p>
+                <button id="camera-text-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="add-camera">
                 <img class="image-1" src="images/main-camera.png" alt="">
@@ -67,6 +67,156 @@
                 <img src="logos/Walmart.svg" alt="">
             </div>
         </section>
+        <hr>
+        <!-- Collection Section -->
+        <h2 id="popular-collection">Popular Collection</h2>
+        <section class="collection-items">
+            <div class="collection">
+                <img src="images/tripod.png" alt="">
+                <h2 id="collection-header">Flex Tripod</h2>
+                <p id="collection-price">$50.48</p>
+                <div class="collection-ratings">
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star empty"></i></div>
+                    <p>4.00</p>
+                </div>
+                <p>Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible! </p>
+            </div>
+            <div class="collection">
+                <img src="images/mic.png" alt="">
+                <h2 id="collection-header">Microphone</h2>
+                <p id="collection-price">$120.25</p>
+                <div class="collection-ratings">
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star empty"></i></div>
+                    <p>4.00</p>
+                </div>
+                <p>Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible! </p>
+            </div>
+            <div class="collection">
+                <img src="images/airpod.png" alt="">
+                <h2 id="collection-header">Airbuds</h2>
+                <p id="collection-price">$100.00</p>
+                <div class="collection-ratings">
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star empty"></i></div>
+                    <p>4.00</p>
+                </div>
+                <p>Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible! </p>
+            </div>
+            <div class="collection">
+                <img src="images/drone.png" alt="">
+                <h2 id="collection-header">Drone</h2>
+                <p id="collection-price">$980.25</p>
+                <div class="collection-ratings">
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star empty"></i></div>
+                    <p>4.00</p>
+                </div>
+                <p>Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible! </p>
+            </div>
+            <div class="collection">
+                <img src="images/lights.png" alt="">
+                <h2 id="collection-header">Light Setup</h2>
+                <p id="collection-price">$1200.00</p>
+                <div class="collection-ratings">
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star empty"></i></div>
+                    <p>4.00</p>
+                </div>
+                <p>Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible! </p>
+            </div>
+            <div class="collection">
+                <img src="images/setup.png" alt="">
+                <h2 id="collection-header">Photoshoot set</h2>
+                <p id="collection-price">$820.40</p>
+                <div class="collection-ratings">
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star empty"></i></div>
+                    <p>4.00</p>
+                </div>
+                <p>Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible! </p>
+            </div>
+            <div class="collection">
+                <img src="images/camera.png" alt="">
+                <h2 id="collection-header">Blogging Camera</h2>
+                <p id="collection-price">$1800.80</p>
+                <div class="collection-ratings">
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star empty"></i></div>
+                    <p>4.00</p>
+                </div>
+                <p>Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible! </p>
+            </div>
+            <div class="collection">
+                <img src="images/single-light.png" alt="">
+                <h2 id="collection-header">Green Screen</h2>
+                <p id="collection-price">$25.48</p>
+                <div class="collection-ratings">
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star empty"></i></div>
+                    <p>4.00</p>
+                </div>
+                <p>Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible! </p>
+            </div>
+            <div class="collection">
+                <img src="images/action.png" alt="">
+                <h2 id="collection-header">Action Camera</h2>
+                <p id="collection-price">$380.00</p>
+                <div class="collection-ratings">
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star filled"></i></div>
+                    <div><i class="fa-solid fa-star empty"></i></div>
+                    <p>4.00</p>
+                </div>
+                <p>Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible! </p>
+            </div>
+        </section>
+        <h5 id="see-more">See More <i class="fa-solid fa-arrow-right"></i></h5>
     </main>
 </body>
 
