--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <main>
     <header class="header">
         <div class="header-left">
             <h2 id="header-influencer">Influencer products</h2>
@@ -28,7 +29,6 @@
             </ul>
         </div>
     </header>
-    <main>
         <!-- Camera Part -->
         <section class="camera">
             <div class="camera-text">
@@ -217,7 +217,32 @@
             </div>
         </section>
         <h5 id="see-more">See More <i class="fa-solid fa-arrow-right"></i></h5>
+        <section class="featured">
+            <div>
+                <img src="images/gear.png" alt="">
+            </div>
+            <div>
+                <h1 id="featured-header">Featured products at one place</h1>
+                <p id="featured-para">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br>
+                    do amet sint. Velit officia consequat duis enim velit mollit. <br>
+                    Exercitation veniam consequat sunt nostrud amet. </p>
+                    <button id="featured-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="footer-text">
+            <h2 class="footer-header">Influencer products</h2>
+            <p>Copyright © 2020 influencer products <br>
+                All rights reserved </p>
+        </div>
+        <div class="icons">
+            <div><i class="fa-brands fa-instagram"></i></div>
+            <div><i class="fa-solid fa-globe"></i></div>
+            <div><i class="fa-brands fa-twitter"></i></div>
+            <div><i class="fa-brands fa-youtube"></i></div>
+        </div>
+    </footer>
 </body>
 
 </html>
